[project]
name = "tavily-register"
version = "0.1.0"
description = "使用比特浏览器和可配置临时邮箱的 Tavily API Key 自动化脚本"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "curl-cffi>=0.7.0",
    "luckmail-sdk",
    "playwright==1.40.0",
    "python-dotenv>=1.0.1",
    "requests==2.31.0",
]

[tool.uv.sources]
luckmail-sdk = { path = "luckmail", editable = true }

[dependency-groups]
dev = [
    "coverage>=7.10.0",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py310"
extend-exclude = ["luckmail"]
